added update button

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -5,11 +5,12 @@
 <h2> Still to be Done! </h2>
     {% for task in all_tasks %} 
     {% if task.completed == False %}
-    <p>
-        Task ID: {{ task.id }}<br>
-        Task Name: {{ task.name }}<br>
-    <p>
-        {% endif %}
+        <p>
+            Task ID: {{ task.id }}<br>
+            Task Name: {{ task.name }}<br>
+            <a href="{{ url_for('update_task', id=task.id) }}">Update Task</a>
+        <p>
+    {% endif %}
     {% endfor %}
 
 
