--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -8,7 +8,8 @@
         <p>
             Task ID: {{ task.id }}<br>
             Task Name: {{ task.name }}<br>
-            <a href="{{ url_for('update_task', id=task.id) }}">Update Task</a>
+            <a href="{{ url_for('update_task', id=task.id) }}">Edit</a>
+            <a href="{{ url_for('delete', id=task.id) }}">Delete</a>
         <p>
     {% endif %}
     {% endfor %}
@@ -20,6 +21,8 @@
     <p>
         Task ID: {{ task.id }}<br>
         Task Name: {{ task.name }}<br>
+        <a href="{{ url_for('update_task', id=task.id) }}">Edit</a>
+        <a href="{{ url_for('delete', id=task.id) }}">Delete</a>
         <p>
     {% endif %}
     {% endfor %}
